--- a/ui/register1.ui
+++ b/ui/register1.ui
@@ -163,7 +163,7 @@ border-radius: 10px</string>
     <string>Password</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
      <x>270</x>
@@ -174,7 +174,8 @@ border-radius: 10px</string>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
-border-radius: 10px</string>
+border-radius: 10px;
+padding: 10px</string>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
@@ -186,8 +187,8 @@ border-radius: 10px</string>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>450</y>
+     <x>260</x>
+     <y>460</y>
      <width>261</width>
      <height>41</height>
     </rect>
@@ -225,6 +226,23 @@ border-radius: 15px</string>
    </property>
    <property name="text">
     <string>Remember me</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_eye">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>370</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../../Downloads/eye-slash-solid (1).svg</normaloff>../../../../../Downloads/eye-slash-solid (1).svg</iconset>
    </property>
   </widget>
  </widget>
