--- a/ui/register1.ui
+++ b/ui/register1.ui
@@ -123,18 +123,23 @@
     <string>Username</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="txt_name">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>270</x>
      <y>250</y>
-     <width>161</width>
+     <width>211</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
-border-radius: 10px</string>
+border: 2px solid white;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: white;
+    font-size: 14px;</string>
    </property>
    <property name="placeholderText">
     <string>Put your username here</string>
