--- a/ui/register1.ui
+++ b/ui/register1.ui
@@ -178,9 +178,12 @@ background-color: transparent;
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
-border-radius: 10px;
-padding: 10px</string>
+    <string notr="true">border: 2px solid white;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: white;
+    font-size: 14px;</string>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
@@ -241,6 +244,10 @@ border-radius: 15px</string>
      <width>31</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">bacground: none;
+border: none</string>
    </property>
    <property name="text">
     <string/>
