--- a/ui/login.ui
+++ b/ui/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>780</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,11 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>900</width>
-     <height>780</height>
+     <x>-10</x>
+     <y>10</y>
+     <width>811</width>
+     <height>601</height>
     </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: #F5F5F5;</string>
    </property>
    <property name="text">
     <string/>
@@ -31,329 +28,155 @@
    <property name="pixmap">
     <pixmap>../img/original-41d71b37aff8a5479729279fbc6bd47e.webp</pixmap>
    </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>80</y>
-     <width>481</width>
-     <height>111</height>
+     <x>220</x>
+     <y>20</y>
+     <width>421</width>
+     <height>191</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial Rounded MT</family>
-     <pointsize>44</pointsize>
+     <pointsize>35</pointsize>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:rgb(155, 170, 255)</string>
-   </property>
-   <property name="text">
-    <string>Create Account</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="Txt_email">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>160</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>131</width>
-     <height>0</height>
-    </size>
-   </property>
-   <property name="font">
-    <font>
-     <family>Berlin Sans FB</family>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:rgb(255, 255, 255)</string>
-   </property>
-   <property name="text">
-    <string>Email</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>280</y>
-     <width>49</width>
-     <height>16</height>
-    </rect>
+    <string notr="true">color:rgb(30, 255, 240)</string>
    </property>
    <property name="text">
     <string/>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>280</y>
-     <width>49</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="txt_Email">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>210</y>
-     <width>191</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0.054, x2:1, y2:0, stop:0 rgba(98, 255, 187, 255), stop:1 rgba(255, 255, 255, 255));
-border: 2px solid white;
- border-radius: 20px;
- padding: 10px 16px;
-background-color: transparent;
- color: white;
-    font-size: 14px;</string>
-   </property>
-   <property name="placeholderText">
-    <string>Please enter your email</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="txt_password">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>270</y>
-     <width>171</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Berlin Sans FB</family>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:rgb(255, 255, 255)</string>
-   </property>
-   <property name="text">
-    <string>password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="txt_password_2">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>320</y>
-     <width>231</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0.054, x2:1, y2:0, stop:0 rgba(98, 255, 187, 255), stop:1 rgba(255, 255, 255, 255));
-border: 2px solid white;
- border-radius: 20px;
- padding: 10px 16px;
-background-color: transparent;
- color: white;
-    font-size: 14px;</string>
-   </property>
-   <property name="placeholderText">
-    <string>please enter your password</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_9">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>380</y>
-     <width>221</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Berlin Sans FB</family>
-     <pointsize>20</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:rgb(255, 255, 255)</string>
-   </property>
-   <property name="text">
-    <string>confirm password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="txt_confirmpassword">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>430</y>
-     <width>221</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0.054, x2:1, y2:0, stop:0 rgba(98, 255, 187, 255), stop:1 rgba(255, 255, 255, 255));
-border: 2px solid white;
- border-radius: 20px;
- padding: 10px 16px;
-background-color: transparent;
- color: white;
-    font-size: 14px;</string>
-   </property>
-   <property name="placeholderText">
-    <string>please confirm your password</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>50</y>
-     <width>171</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial Rounded MT</family>
-     <pointsize>25</pointsize>
-     <italic>false</italic>
-     <underline>false</underline>
-     <fontweight>DemiBold</fontweight>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-radius:qlineargradient(spread:pad, x1:0, y1:0.054, x2:1, y2:0, stop:0 rgba(98, 255, 187, 255), stop:1 rgba(255, 255, 255, 255))</string>
-   </property>
-   <property name="text">
-    <string>log in</string>
+   <property name="pixmap">
+    <pixmap>../../../../../Downloads/images-removebg-preview (1).png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>50</y>
-     <width>111</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial Rounded MT</family>
-     <pointsize>25</pointsize>
-     <bold>true</bold>
-     <underline>true</underline>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 255, 39, 255), stop:0.994475 rgba(0, 70, 255, 255))</string>
-   </property>
-   <property name="text">
-    <string>sign in</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
+     <x>650</x>
      <y>30</y>
-     <width>271</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>MV Boli</family>
-     <pointsize>25</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Weather forecast</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>520</y>
-     <width>231</width>
+     <width>111</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Segoe MDL2 Assets</family>
-     <pointsize>30</pointsize>
+     <family>Britannic</family>
+     <pointsize>25</pointsize>
+     <underline>true</underline>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.165746 rgba(99, 255, 0, 255), stop:0.79558 rgba(0, 144, 255, 255), stop:1 rgba(255, 255, 255, 255));
-border-radius: 10px</string>
+    <string notr="true">color:rgb(255, 255, 255)</string>
    </property>
    <property name="text">
-    <string>Done</string>
+    <string>log in</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btn_eye">
+  <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>340</y>
-     <width>51</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../../../../../Downloads/eye-slash-solid (1).svg</normaloff>../../../../../Downloads/eye-slash-solid (1).svg</iconset>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_4">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>440</y>
-     <width>41</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>../../../../../Downloads/eye-slash-solid (1).svg</normaloff>../../../../../Downloads/eye-slash-solid (1).svg</iconset>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>480</y>
-     <width>191</width>
+     <x>270</x>
+     <y>210</y>
+     <width>151</width>
      <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT</family>
+     <pointsize>20</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color:rgb(0, 255, 212)</string>
+   </property>
+   <property name="text">
+    <string>Email</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txt_email">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>250</y>
+     <width>211</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
+border: 2px solid white;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: white;
+    font-size: 14px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Put your username here</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>310</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT</family>
+     <pointsize>20</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color:rgb(0, 255, 212)</string>
+   </property>
+   <property name="text">
+    <string>Password</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txt_password">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>360</y>
+     <width>181</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 2px solid white;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: white;
+    font-size: 14px;</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
+   <property name="placeholderText">
+    <string>put your password here</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_login">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>460</y>
+     <width>261</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -364,10 +187,76 @@ border-radius: 10px</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.287293 rgba(0, 255, 207, 255), stop:0.834254 rgba(67, 0, 255, 255))</string>
+    <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
+color:rgb(255, 255, 255);
+border-radius: 15px</string>
    </property>
    <property name="text">
-    <string>Already have an account?</string>
+    <string>Log in</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>410</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Fixedsys</family>
+     <pointsize>9</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Remember me</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_eye">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>370</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">bacground: none;
+border: none</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../../../../../Downloads/eye-slash-solid (1).svg</normaloff>../../../../../Downloads/eye-slash-solid (1).svg</iconset>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_register">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>50</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>23</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background: none;
+border: none;
+color:rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>Sign Up</string>
    </property>
   </widget>
  </widget>
