--- a/ui/home.ui
+++ b/ui/home.ui
@@ -38,7 +38,7 @@
     <enum>QFrame::Shape::NoFrame</enum>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="home">
     <widget class="QLabel" name="label">
@@ -1439,7 +1439,7 @@ border: none</string>
     </widget>
    </widget>
    <widget class="QWidget" name="account">
-    <widget class="QPushButton" name="pushButton_15">
+    <widget class="QPushButton" name="btn_avatar">
      <property name="geometry">
       <rect>
        <x>610</x>
@@ -1466,11 +1466,11 @@ border: none</string>
       </size>
      </property>
     </widget>
-    <widget class="QLabel" name="label_41">
+    <widget class="QLabel" name="label_43">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>380</y>
+       <x>180</x>
+       <y>170</y>
        <width>171</width>
        <height>61</height>
       </rect>
@@ -1488,8 +1488,8 @@ border: none</string>
     <widget class="QLabel" name="label_44">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>530</y>
+       <x>170</x>
+       <y>300</y>
        <width>221</width>
        <height>51</height>
       </rect>
@@ -1504,11 +1504,11 @@ border: none</string>
       <string>Password</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="txt_password">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>600</y>
+       <x>170</x>
+       <y>370</y>
        <width>461</width>
        <height>41</height>
       </rect>
@@ -1520,11 +1520,11 @@ border: none</string>
       <string>your password</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="txt_name_2">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>480</y>
+       <x>170</x>
+       <y>240</y>
        <width>461</width>
        <height>41</height>
       </rect>
@@ -1539,8 +1539,8 @@ border: none</string>
     <widget class="QLabel" name="label_42">
      <property name="geometry">
       <rect>
-       <x>180</x>
-       <y>200</y>
+       <x>190</x>
+       <y>40</y>
        <width>171</width>
        <height>61</height>
       </rect>
@@ -1555,14 +1555,17 @@ border: none</string>
       <string>Email:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="txt_email_2">
      <property name="geometry">
       <rect>
        <x>180</x>
-       <y>290</y>
+       <y>120</y>
        <width>421</width>
        <height>41</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::EchoMode::Password</enum>
@@ -1570,6 +1573,60 @@ border: none</string>
      <property name="placeholderText">
       <string>your email </string>
      </property>
+    </widget>
+    <widget class="QLabel" name="label_41">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>430</y>
+       <width>221</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Comic Sans MS</family>
+       <pointsize>40</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Birthday</string>
+     </property>
+    </widget>
+    <widget class="QDateEdit" name="dateEdit">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>500</y>
+       <width>461</width>
+       <height>41</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>590</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>male</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>female</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>None</string>
+      </property>
+     </item>
     </widget>
    </widget>
   </widget>
