--- a/ui/login.ui
+++ b/ui/login.ui
@@ -13,52 +13,10 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>-10</x>
-     <y>10</y>
-     <width>811</width>
-     <height>601</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../img/original-41d71b37aff8a5479729279fbc6bd47e.webp</pixmap>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>20</y>
-     <width>421</width>
-     <height>191</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial Rounded MT</family>
-     <pointsize>35</pointsize>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color:rgb(30, 255, 240)</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../../../../../Downloads/images-removebg-preview (1).png</pixmap>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>650</x>
+     <x>660</x>
      <y>30</y>
      <width>111</width>
      <height>61</height>
@@ -66,16 +24,17 @@
    </property>
    <property name="font">
     <font>
-     <family>Britannic</family>
+     <family>Segoe UI</family>
      <pointsize>25</pointsize>
+     <bold>true</bold>
      <underline>true</underline>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:rgb(255, 255, 255)</string>
+    <string notr="true">color:black;</string>
    </property>
    <property name="text">
-    <string>log in</string>
+    <string>Log in</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -95,7 +54,7 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:rgb(0, 255, 212)</string>
+    <string notr="true">color:rgb(0, 0, 0)</string>
    </property>
    <property name="text">
     <string>Email</string>
@@ -111,13 +70,16 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
-border: 2px solid white;
+    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:1 rgba(0, 0, 0, 255));
+border: 3px solid black;
  border-radius: 20px;
  padding: 10px 16px;
 background-color: transparent;
- color: white;
+ color: black;
     font-size: 14px;</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
    <property name="placeholderText">
     <string>Put your username here</string>
@@ -140,7 +102,7 @@ background-color: transparent;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:rgb(0, 255, 212)</string>
+    <string notr="true">color:rgb(0, 0, 0)</string>
    </property>
    <property name="text">
     <string>Password</string>
@@ -156,11 +118,11 @@ background-color: transparent;
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">border: 2px solid white;
+    <string notr="true">border: 3px solid black;
  border-radius: 20px;
  padding: 10px 16px;
 background-color: transparent;
- color: white;
+ color: black;
     font-size: 14px;</string>
    </property>
    <property name="echoMode">
@@ -187,7 +149,7 @@ background-color: transparent;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0.174033, y1:0.276, x2:1, y2:1, stop:0 rgba(0, 208, 255, 255), stop:0.679558 rgba(162, 0, 255, 255));
+    <string notr="true">background-color:rgb(0, 0, 0);
 color:rgb(255, 255, 255);
 border-radius: 15px</string>
    </property>
@@ -238,7 +200,7 @@ border: none</string>
   <widget class="QPushButton" name="btn_register">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>490</x>
      <y>50</y>
      <width>131</width>
      <height>31</height>
@@ -253,12 +215,59 @@ border: none</string>
    <property name="styleSheet">
     <string notr="true">background: none;
 border: none;
-color:rgb(255, 255, 255);</string>
+color:black;</string>
    </property>
    <property name="text">
     <string>Sign Up</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>801</width>
+     <height>600</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../../../Downloads/FEAT-DP-Longest-Mountain-Ranges-on-Earth.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>70</y>
+     <width>171</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial Rounded MT</family>
+     <pointsize>45</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Log in</string>
+   </property>
+  </widget>
+  <zorder>label</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_5</zorder>
+  <zorder>txt_email</zorder>
+  <zorder>label_7</zorder>
+  <zorder>txt_password</zorder>
+  <zorder>btn_login</zorder>
+  <zorder>checkBox</zorder>
+  <zorder>btn_eye</zorder>
+  <zorder>btn_register</zorder>
+  <zorder>label_2</zorder>
  </widget>
  <resources/>
  <connections/>
