--- a/ui/register.ui
+++ b/ui/register.ui
@@ -6,41 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>780</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>900</width>
-     <height>780</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: #F5F5F5;</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../img/original-41d71b37aff8a5479729279fbc6bd47e.webp</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>30</y>
-     <width>481</width>
+     <x>290</x>
+     <y>0</y>
+     <width>191</width>
      <height>111</height>
     </rect>
    </property>
@@ -52,17 +30,17 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:rgb(155, 170, 255)</string>
+    <string notr="true">color:rgb(255, 255, 255)</string>
    </property>
    <property name="text">
-    <string>Create Account</string>
+    <string>Sign up</string>
    </property>
   </widget>
   <widget class="QLabel" name="Txt_email">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>260</y>
+     <x>270</x>
+     <y>170</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -115,9 +93,9 @@
   <widget class="QLineEdit" name="txt_email">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>300</y>
-     <width>191</width>
+     <x>270</x>
+     <y>210</y>
+     <width>231</width>
      <height>41</height>
     </rect>
    </property>
@@ -137,8 +115,8 @@ background-color: transparent;
   <widget class="QLabel" name="lb">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>350</y>
+     <x>270</x>
+     <y>260</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -153,16 +131,16 @@ background-color: transparent;
     <string notr="true">color:rgb(255, 255, 255)</string>
    </property>
    <property name="text">
-    <string>password</string>
+    <string>Password</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="txt_password">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>400</y>
+     <x>270</x>
+     <y>300</y>
      <width>231</width>
-     <height>61</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -181,8 +159,8 @@ background-color: transparent;
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>460</y>
+     <x>270</x>
+     <y>350</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -197,15 +175,15 @@ background-color: transparent;
     <string notr="true">color:rgb(255, 255, 255)</string>
    </property>
    <property name="text">
-    <string>confirm password</string>
+    <string>Confirm Password</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="txt_confirm_password">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>510</y>
-     <width>221</width>
+     <x>270</x>
+     <y>380</y>
+     <width>241</width>
      <height>41</height>
     </rect>
    </property>
@@ -225,8 +203,8 @@ background-color: transparent;
   <widget class="QPushButton" name="btn_login">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>20</y>
+     <x>500</x>
+     <y>40</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -241,7 +219,8 @@ background-color: transparent;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">border-radius:qlineargradient(spread:pad, x1:0, y1:0.054, x2:1, y2:0, stop:0 rgba(98, 255, 187, 255), stop:1 rgba(255, 255, 255, 255))</string>
+    <string notr="true">border-radius:rgb(0, 0, 0);
+color:rgb(0, 0, 0)</string>
    </property>
    <property name="text">
     <string>log in</string>
@@ -250,8 +229,8 @@ background-color: transparent;
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>20</y>
+     <x>670</x>
+     <y>40</y>
      <width>111</width>
      <height>41</height>
     </rect>
@@ -265,36 +244,17 @@ background-color: transparent;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 255, 39, 255), stop:0.994475 rgba(0, 70, 255, 255))</string>
+    <string notr="true">color:rgb(0, 0, 0)</string>
    </property>
    <property name="text">
     <string>sign in</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>271</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>MV Boli</family>
-     <pointsize>25</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Weather forecast</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btn_register">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>640</y>
+     <x>280</x>
+     <y>490</y>
      <width>231</width>
      <height>61</height>
     </rect>
@@ -306,8 +266,9 @@ background-color: transparent;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.165746 rgba(99, 255, 0, 255), stop:0.79558 rgba(0, 144, 255, 255), stop:1 rgba(255, 255, 255, 255));
-border-radius: 10px</string>
+    <string notr="true">background-color:rgb(0, 0, 0);
+border-radius: 10px;
+color: white;</string>
    </property>
    <property name="text">
     <string>Done</string>
@@ -316,8 +277,8 @@ border-radius: 10px</string>
   <widget class="QPushButton" name="btn_eye_p">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>420</y>
+     <x>460</x>
+     <y>390</y>
      <width>51</width>
      <height>21</height>
     </rect>
@@ -337,8 +298,8 @@ border: none;</string>
   <widget class="QPushButton" name="btn_eye_cp">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>520</y>
+     <x>460</x>
+     <y>310</y>
      <width>41</width>
      <height>21</height>
     </rect>
@@ -358,8 +319,8 @@ border: none;</string>
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>580</y>
+     <x>270</x>
+     <y>440</y>
      <width>191</width>
      <height>31</height>
     </rect>
@@ -372,7 +333,7 @@ border: none;</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.287293 rgba(0, 255, 207, 255), stop:0.834254 rgba(67, 0, 255, 255))</string>
+    <string notr="true">color:rgb(0, 0, 0)</string>
    </property>
    <property name="text">
     <string>Already have an account?</string>
@@ -381,8 +342,8 @@ border: none;</string>
   <widget class="QLabel" name="Txt_email_2">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>130</y>
+     <x>280</x>
+     <y>80</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -409,9 +370,9 @@ border: none;</string>
   <widget class="QLineEdit" name="txt_name">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>190</y>
-     <width>191</width>
+     <x>270</x>
+     <y>130</y>
+     <width>231</width>
      <height>41</height>
     </rect>
    </property>
@@ -428,6 +389,43 @@ background-color: transparent;
     <string>Please enter your name</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>600</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../img/photo-1506905925346-21bda4d32df4.jpeg</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>Txt_email</zorder>
+  <zorder>label_6</zorder>
+  <zorder>label_7</zorder>
+  <zorder>txt_email</zorder>
+  <zorder>lb</zorder>
+  <zorder>txt_password</zorder>
+  <zorder>label_9</zorder>
+  <zorder>txt_confirm_password</zorder>
+  <zorder>btn_login</zorder>
+  <zorder>label_3</zorder>
+  <zorder>btn_register</zorder>
+  <zorder>btn_eye_p</zorder>
+  <zorder>btn_eye_cp</zorder>
+  <zorder>checkBox</zorder>
+  <zorder>Txt_email_2</zorder>
+  <zorder>txt_name</zorder>
  </widget>
  <resources/>
  <connections/>
