--- a/ui/home.ui
+++ b/ui/home.ui
@@ -38,7 +38,7 @@
     <enum>QFrame::Shape::NoFrame</enum>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="home">
     <widget class="QLabel" name="label">
@@ -78,6 +78,9 @@
        <pointsize>40</pointsize>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border: None</string>
+     </property>
      <property name="text">
       <string>Today</string>
      </property>
@@ -85,7 +88,7 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>220</x>
+       <x>260</x>
        <y>320</y>
        <width>141</width>
        <height>51</height>
@@ -149,7 +152,7 @@ Wind: 5 km/h</string>
        <rect>
         <x>10</x>
         <y>80</y>
-        <width>81</width>
+        <width>91</width>
         <height>16</height>
        </rect>
       </property>
@@ -169,7 +172,7 @@ Wind: 5 km/h</string>
      <widget class="QPushButton" name="btn_icon_day1">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>100</x>
         <y>60</y>
         <width>80</width>
         <height>61</height>
@@ -279,7 +282,7 @@ border: none
        <rect>
         <x>10</x>
         <y>80</y>
-        <width>81</width>
+        <width>91</width>
         <height>16</height>
        </rect>
       </property>
@@ -301,7 +304,7 @@ border: none
        <rect>
         <x>10</x>
         <y>60</y>
-        <width>91</width>
+        <width>101</width>
         <height>21</height>
        </rect>
       </property>
@@ -345,7 +348,7 @@ border: none
      <widget class="QPushButton" name="btn_icon_day3">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>100</x>
         <y>80</y>
         <width>71</width>
         <height>41</height>
@@ -360,7 +363,7 @@ border:none</string>
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>../../../../../Downloads/tstormday-removebg-preview.png</normaloff>../../../../../Downloads/tstormday-removebg-preview.png</iconset>
+        <normaloff>../img/tstormday-removebg-preview.png</normaloff>../img/tstormday-removebg-preview.png</iconset>
       </property>
       <property name="iconSize">
        <size>
@@ -398,9 +401,9 @@ Wind: 8 km/h</string>
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>160</y>
+       <y>150</y>
        <width>501</width>
-       <height>151</height>
+       <height>161</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -484,9 +487,9 @@ Wind: 8 km/h</string>
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>-70</y>
+        <y>-40</y>
         <width>271</width>
-        <height>281</height>
+        <height>211</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -498,7 +501,7 @@ border: none</string>
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>../../../../../Downloads/112082293-ho-chi-minh-city-saigon-skyline-vietnam-trendy-vector-illustcast.png</normaloff>../../../../../Downloads/112082293-ho-chi-minh-city-saigon-skyline-vietnam-trendy-vector-illustcast.png</iconset>
+        <normaloff>../img/112082293-ho-chi-minh-city-saigon-skyline-vietnam-trendy-vector-illustration-linear-style.jpg</normaloff>../img/112082293-ho-chi-minh-city-saigon-skyline-vietnam-trendy-vector-illustration-linear-style.jpg</iconset>
       </property>
       <property name="iconSize">
        <size>
@@ -676,7 +679,7 @@ Wind: 5 km/h</string>
      <widget class="QPushButton" name="btn_icon_day2">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>100</x>
         <y>60</y>
         <width>80</width>
         <height>61</height>
@@ -707,7 +710,7 @@ border: none
        <rect>
         <x>10</x>
         <y>80</y>
-        <width>81</width>
+        <width>91</width>
         <height>16</height>
        </rect>
       </property>
@@ -792,9 +795,9 @@ border: none
      <widget class="QLabel" name="label_details_day4">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>80</x>
         <y>10</y>
-        <width>81</width>
+        <width>91</width>
         <height>51</height>
        </rect>
       </property>
@@ -818,7 +821,7 @@ Wind: 5 km/h</string>
        <rect>
         <x>10</x>
         <y>90</y>
-        <width>81</width>
+        <width>91</width>
         <height>16</height>
        </rect>
       </property>
@@ -840,7 +843,7 @@ Wind: 5 km/h</string>
        <rect>
         <x>10</x>
         <y>60</y>
-        <width>111</width>
+        <width>131</width>
         <height>21</height>
        </rect>
       </property>
@@ -863,7 +866,7 @@ Wind: 5 km/h</string>
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>51</width>
+        <width>61</width>
         <height>21</height>
        </rect>
       </property>
@@ -884,7 +887,7 @@ Wind: 5 km/h</string>
      <widget class="QPushButton" name="btn_icon_day4">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>100</x>
         <y>80</y>
         <width>71</width>
         <height>31</height>
@@ -899,7 +902,7 @@ border: none</string>
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>../../../../../Downloads/tstormday-removebg-preview.png</normaloff>../../../../../Downloads/tstormday-removebg-preview.png</iconset>
+        <normaloff>../img/tstormday-removebg-preview.png</normaloff>../img/tstormday-removebg-preview.png</iconset>
       </property>
       <property name="iconSize">
        <size>
@@ -912,9 +915,9 @@ border: none</string>
     <widget class="QFrame" name="frame_day5">
      <property name="geometry">
       <rect>
-       <x>250</x>
+       <x>270</x>
        <y>550</y>
-       <width>180</width>
+       <width>181</width>
        <height>140</height>
       </rect>
      </property>
@@ -930,9 +933,9 @@ border: none</string>
      <widget class="QLabel" name="label_details_day5">
       <property name="geometry">
        <rect>
-        <x>90</x>
+        <x>80</x>
         <y>10</y>
-        <width>81</width>
+        <width>91</width>
         <height>51</height>
        </rect>
       </property>
@@ -956,8 +959,8 @@ Wind: 10 km/h</string>
        <rect>
         <x>10</x>
         <y>90</y>
-        <width>81</width>
-        <height>16</height>
+        <width>91</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="font">
@@ -978,7 +981,7 @@ Wind: 10 km/h</string>
        <rect>
         <x>10</x>
         <y>60</y>
-        <width>141</width>
+        <width>161</width>
         <height>21</height>
        </rect>
       </property>
@@ -1001,7 +1004,7 @@ Wind: 10 km/h</string>
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>51</width>
+        <width>61</width>
         <height>21</height>
        </rect>
       </property>
@@ -1019,25 +1022,25 @@ Wind: 10 km/h</string>
        <string>Tuesday</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_icon_day5">
+     <widget class="QPushButton" name="pushButton_2">
       <property name="geometry">
        <rect>
-        <x>90</x>
-        <y>70</y>
-        <width>71</width>
-        <height>51</height>
+        <x>109</x>
+        <y>80</y>
+        <width>61</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background: none;
-border: none</string>
+       <string notr="true">border: None
+</string>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="icon">
        <iconset>
-        <normaloff>../../../../../Downloads/images__1_-removebg-preview-removebg-preview.png</normaloff>../../../../../Downloads/images__1_-removebg-preview-removebg-preview.png</iconset>
+        <normaloff>../img/16190905.png</normaloff>../img/16190905.png</iconset>
       </property>
       <property name="iconSize">
        <size>
@@ -1046,6 +1049,51 @@ border: none</string>
        </size>
       </property>
      </widget>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>570</x>
+       <y>30</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../img/images__1_-removebg-preview (1).png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_3">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>10</y>
+       <width>51</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: None</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../img/z4304844020153_21076e73f2b11bffd2f1681533787c48.jpg</normaloff>../img/z4304844020153_21076e73f2b11bffd2f1681533787c48.jpg</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>47</width>
+       <height>57</height>
+      </size>
+     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="account">
@@ -1067,7 +1115,7 @@ border: none</string>
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>../../../../Pictures/gia khiêm.jpg</normaloff>../../../../Pictures/gia khiêm.jpg</iconset>
+       <normaloff>../img/gia khiêm.jpg</normaloff>../img/gia khiêm.jpg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -1098,11 +1146,20 @@ border: none</string>
     <widget class="QLineEdit" name="txt_name">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>180</x>
        <y>240</y>
        <width>461</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:1 rgba(0, 0, 0, 255));
+border: 3px solid black;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: black;
+    font-size: 14px;</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::EchoMode::Normal</enum>
@@ -1135,12 +1192,18 @@ border: none</string>
       <rect>
        <x>180</x>
        <y>120</y>
-       <width>421</width>
-       <height>41</height>
+       <width>451</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true"/>
+      <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:1 rgba(0, 0, 0, 255));
+border: 3px solid black;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: black;
+    font-size: 14px;</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::EchoMode::Normal</enum>
@@ -1171,18 +1234,27 @@ border: none</string>
     <widget class="QDateEdit" name="txt_birthday">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>420</y>
+       <x>180</x>
+       <y>410</y>
        <width>461</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:1 rgba(0, 0, 0, 255));
+border: 3px solid black;
+ border-radius: 20px;
+ padding: 10px 16px;
+background-color: transparent;
+ color: black;
+    font-size: 14px;</string>
      </property>
     </widget>
     <widget class="QComboBox" name="txt_gender">
      <property name="geometry">
       <rect>
        <x>170</x>
-       <y>520</y>
+       <y>530</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -1232,7 +1304,7 @@ border: none</string>
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>460</y>
+       <y>470</y>
        <width>221</width>
        <height>51</height>
       </rect>
@@ -1242,6 +1314,9 @@ border: none</string>
        <family>Comic Sans MS</family>
        <pointsize>40</pointsize>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: None</string>
      </property>
      <property name="text">
       <string>Gender</string>
@@ -1286,7 +1361,7 @@ border: none
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>../../../../../Downloads/cloud-solid.svg</normaloff>../../../../../Downloads/cloud-solid.svg</iconset>
+      <normaloff>../img/cloud-solid.svg</normaloff>../img/cloud-solid.svg</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -1313,34 +1388,7 @@ border: none</string>
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>../../../../../Downloads/house-solid.svg</normaloff>../../../../../Downloads/house-solid.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>60</width>
-      <height>100</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_profile">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>330</y>
-      <width>101</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background: none;
-border: none</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../../../Downloads/user-solid.svg</normaloff>../../../../../Downloads/user-solid.svg</iconset>
+      <normaloff>../img/house-solid.svg</normaloff>../img/house-solid.svg</iconset>
     </property>
     <property name="iconSize">
      <size>
@@ -1353,7 +1401,7 @@ border: none</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>410</y>
+      <y>440</y>
       <width>101</width>
       <height>71</height>
      </rect>
@@ -1367,34 +1415,7 @@ border: none</string>
     </property>
     <property name="icon">
      <iconset>
-      <normaloff>../../../../../Downloads/info-circle-solid.svg</normaloff>../../../../../Downloads/info-circle-solid.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>60</width>
-      <height>100</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>490</y>
-      <width>91</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background: none;
-border: none</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../../../Downloads/gear-solid.svg</normaloff>../../../../../Downloads/gear-solid.svg</iconset>
+      <normaloff>../img/gear-solid.svg</normaloff>../img/gear-solid.svg</iconset>
     </property>
     <property name="iconSize">
      <size>
